[gd_scene load_steps=4 format=3 uid="uid://dndt0jcjj7xpo"]

[ext_resource type="Script" uid="uid://boere3vd8qgrv" path="res://Scripts/UI/pause_menu.gd" id="1_0buc1"]
[ext_resource type="AudioStream" uid="uid://cr4bfn051tkfs" path="res://Assets/Audio/Win1.mp3" id="2_epntb"]
[ext_resource type="FontFile" uid="uid://dpge436uj6kg4" path="res://Assets/Text/VCR_OSD_MONO_1.001.ttf" id="4_vv3ew"]

[node name="PauseMenu" type="Control"]
process_mode = 3
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0buc1")

[node name="BGAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_epntb")
autoplay = true

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -111.0
offset_right = 142.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CenterContainer"]
custom_minimum_size = Vector2(350, 350)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="PauseLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_vv3ew")
theme_override_font_sizes/font_size = 64
text = "PAUSED"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_vv3ew")
theme_override_font_sizes/font_size = 32
text = "RESUME"

[node name="Restart" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_vv3ew")
theme_override_font_sizes/font_size = 32
text = "RESTART"

[node name="ReturnToMenu" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_vv3ew")
theme_override_font_sizes/font_size = 32
text = "RETURN TO MAIN"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ReturnToMenu" to="." method="_on_return_to_menu_pressed"]
